--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "com-sarriaroman-photoviewer",
+  "name": "af-cdv-photoviewer",
   "version": "1.1.18",
   "description": "This plugin is intended to show a picture from an URL into a Photo Viewer with zoom features.",
   "cordova": {
-    "id": "com-sarriaroman-photoviewer",
+    "id": "af-cdv-photoviewer",
     "platforms": [
       "android",
       "ios"
